# secrets

./: .gitignore  Pipfile  README.md  coverage.xml  manage.py  pyproject.toml  tox.ini
.circleci/: config.yml
docs/source/: conf.py  index.rst  overview.rst  technology.rst
scripts/: extract-org-table.el
secrets/: __init__.py  backends.py  passwords.py  services.py  utils.py
tests/: test_backends.py  test_manage.py  test_passwords.py  test_services.py  test_utils.py
tests/data/: encrypted.json  keyfile1  plain.json  secrets.org  services.org
tests/expected/: list-services.txt  search-compact.json  search-full.json  secrets.json  services.json  table1.txt
