[tool.poetry]
name = "secrets"
version = "0.1.0"
description = "CLI application to manage secret data"
authors = ["Daniel Gonzalez <dangonval@recursion.eu>"]
license = "GPL-3.0-only"

[tool.poetry.dependencies]
python = "^3.8"
click = "^7.1.2"
pyyaml = "^5.3.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
